@@ -64,8 +64,10 @@ Changes since the official release 1.2:
 
 	count --triangulation=4ti2
 
-* A new program, `latte2ine' is built that converts from LattE-style
-  input files to cdd-style input files.
+* New programs, `latte2ine' and `latte2ext', are built that perform
+  the trivial conversion from LattE-style input files to CDD-style
+  input files.
 
   	latte2ine < FILENAME.latte > FILENAME.ine
+	latte2ext < FILENAME.vrep.latte > FILENAME.ext
 
